ing/prom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ing
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx    
spec:
  rules:
  - host: prometheus-dashboard.com
    http:
      paths:
      - backend:
          service:
            name: prometheus-server
            port:
              number: 80
        pathType: Prefix
        path: /
